--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        Cordel Moderno
-    </header>
-    <nav>
+        <h1>CORDEL MODERNO</h1>
+        <nav>
         Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a>
-    </nav>
+        </nav>
+    </header>
     <main>
         <article>
             <p>
