--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <article>
-            <p>
+            <p class="partebranca">
                 Estou ficando cansado<br>
                 Da tal tecnologia<br>
                 Só se fala por e-mail<br>
