--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -14,9 +14,8 @@
         Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a>
         </nav>
     </header>
-    <main>
-        <article>
-            <p class="partebranca">
+    <main id="container">
+            <p class="parte">
                 Estou ficando cansado<br>
                 Da tal tecnologia<br>
                 Só se fala por e-mail<br>
@@ -26,7 +25,7 @@
                 Vou dizer tudo em poesia.<br>
             </p>
             //---
-            <p>
+            <p class="transp">
                 Não é mais como era antes<br>
                 É tudo abreviado<br>
                 "Você" só tem duas letras<br>
@@ -36,7 +35,7 @@
                 E um coração desenhado.<br>
             </p>
             //---
-            <p>
+            <p class="parte">
                 Arroba agora não pesa<br>
                 É parte de um endereço<br>
                 Ponto final nem se usa<br>
@@ -45,45 +44,46 @@
                 Se o saite é muito bom<br>
                 Ele vale um alto preço.<br>
             </p>
-            <p>
-                Pra piorar a liguagem<br>
-                O emoticom é um risco<br>
-                Tem símbolo para tudo<br>
-                Ponto e vírgula e um asterisco<br>
-                Um beijo significa<br>
-                Pra entender como fica<br>
-                Decifre esse rabisco.<br>
-            </p>
-            //---
-            <p>
-                Tenho saudade das cartas<br>
-                Escritas com a própria mão<br>
-                Mandava no mês de Junho<br>
-                Só chegava no Verão<br>
-                Mas matava a saudade<br>
-                Era texto de verdade<br>
-                Nas linhas do coração.<br>
-            </p>
-            //---
-            <p>
-                Agora, escrevo e envio<br>
-                Chegando na mesma hora<br>
-                Mas quando vou prosear<br>
-                A pessoa foi embora<br>
-                Abriu outro aplicativo<br>
-                O mundo ficou cativo<br>
-                Da tecnologia do agora.<br>
-            </p>
-            <p>
-                Felizmente, pra orar<br>
-                Não precisa de internet<br>
-                Deus escuta todo mundo<br>
-                Se quiser, faça esse teste<br>
-                Dois pontos são dois joelhos<br>
-                Seus lábios são aparelhos<br>
-                Deixe que Deus interprete.<br>
-            </p>
-        </article>
+            <article id="conteudo">
+                <p class="parte">
+                    Pra piorar a liguagem<br>
+                    O emoticom é um risco<br>
+                    Tem símbolo para tudo<br>
+                    Ponto e vírgula e um asterisco<br>
+                    Um beijo significa<br>
+                    Pra entender como fica<br>
+                    Decifre esse rabisco.<br>
+                </p>
+                //---
+                <p class="transp">
+                    Tenho saudade das cartas<br>
+                    Escritas com a própria mão<br>
+                    Mandava no mês de Junho<br>
+                    Só chegava no Verão<br>
+                    Mas matava a saudade<br>
+                    Era texto de verdade<br>
+                    Nas linhas do coração.<br>
+                </p>
+                //---
+                <p class="parte">
+                    Agora, escrevo e envio<br>
+                    Chegando na mesma hora<br>
+                    Mas quando vou prosear<br>
+                    A pessoa foi embora<br>
+                    Abriu outro aplicativo<br>
+                    O mundo ficou cativo<br>
+                    Da tecnologia do agora.<br>
+                </p>
+                <p class="parte">
+                    Felizmente, pra orar<br>
+                    Não precisa de internet<br>
+                    Deus escuta todo mundo<br>
+                    Se quiser, faça esse teste<br>
+                    Dois pontos são dois joelhos<br>
+                    Seus lábios são aparelhos<br>
+                    Deixe que Deus interprete.<br>
+                </p>
+            </article>
     </main>
     <footer>
         <p>Site criado por Gustavo Guanabara para o CursoemVideo</p>
