--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -7,44 +7,42 @@
     <link rel="stylesheet" href="style.css">
     <title>Cordel Moderno</title>
 </head>
-<body>
+<body id="container">
     <header>
         <h1>Cordel Moderno</h1>
         <nav>
         Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a>
         </nav>
     </header>
-    <main id="container">
-            <p class="parte">
-                Estou ficando cansado<br>
-                Da tal tecnologia<br>
-                Só se fala por e-mail<br>
-                Mensagem curta e fria<br>
-                Twitter e Facebook<br>
-                Antes que eu caduque<br>
-                Vou dizer tudo em poesia.<br>
-            </p>
-            //---
-            <p class="transp">
-                Não é mais como era antes<br>
-                É tudo abreviado<br>
-                "Você" só tem duas letras<br>
-                O "O" e o "E" foi riscado<br>
-                Para declarar o amor<br>
-                Basta botar uma flor<br>
-                E um coração desenhado.<br>
-            </p>
-            //---
-            <p class="parte">
-                Arroba agora não pesa<br>
-                É parte de um endereço<br>
-                Ponto final nem se usa<br>
-                Ou vai até no começo<br>
-                Agora é .com<br>
-                Se o saite é muito bom<br>
-                Ele vale um alto preço.<br>
-            </p>
+    <main>
             <article id="conteudo">
+                <p class="parte">
+                    Estou ficando cansado<br>
+                    Da tal tecnologia<br>
+                    Só se fala por e-mail<br>
+                    Mensagem curta e fria<br>
+                    Twitter e Facebook<br>
+                    Antes que eu caduque<br>
+                    Vou dizer tudo em poesia.<br>
+                </p>
+                <p class="transp">
+                    Não é mais como era antes<br>
+                    É tudo abreviado<br>
+                    "Você" só tem duas letras<br>
+                    O "O" e o "E" foi riscado<br>
+                    Para declarar o amor<br>
+                    Basta botar uma flor<br>
+                    E um coração desenhado.<br>
+                </p>
+                <p class="parte">
+                    Arroba agora não pesa<br>
+                    É parte de um endereço<br>
+                    Ponto final nem se usa<br>
+                    Ou vai até no começo<br>
+                    Agora é .com<br>
+                    Se o saite é muito bom<br>
+                    Ele vale um alto preço.<br>
+                </p>
                 <p class="parte">
                     Pra piorar a liguagem<br>
                     O emoticom é um risco<br>
@@ -54,7 +52,6 @@
                     Pra entender como fica<br>
                     Decifre esse rabisco.<br>
                 </p>
-                //---
                 <p class="transp">
                     Tenho saudade das cartas<br>
                     Escritas com a própria mão<br>
@@ -64,7 +61,6 @@
                     Era texto de verdade<br>
                     Nas linhas do coração.<br>
                 </p>
-                //---
                 <p class="parte">
                     Agora, escrevo e envio<br>
                     Chegando na mesma hora<br>
