--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Cordel Moderno</title>
 </head>
-<body id="container">
+<body >
     <header>
         <h1>Cordel Moderno</h1>
         <nav>
@@ -15,74 +15,88 @@
         </nav>
     </header>
     <main>
-            <article id="conteudo">
-                <p class="parte">
-                    Estou ficando cansado<br>
-                    Da tal tecnologia<br>
-                    Só se fala por e-mail<br>
-                    Mensagem curta e fria<br>
-                    Twitter e Facebook<br>
-                    Antes que eu caduque<br>
-                    Vou dizer tudo em poesia.<br>
-                </p>
-                <p class="transp">
-                    Não é mais como era antes<br>
-                    É tudo abreviado<br>
-                    "Você" só tem duas letras<br>
-                    O "O" e o "E" foi riscado<br>
-                    Para declarar o amor<br>
-                    Basta botar uma flor<br>
-                    E um coração desenhado.<br>
-                </p>
-                <p class="parte">
-                    Arroba agora não pesa<br>
-                    É parte de um endereço<br>
-                    Ponto final nem se usa<br>
-                    Ou vai até no começo<br>
-                    Agora é .com<br>
-                    Se o saite é muito bom<br>
-                    Ele vale um alto preço.<br>
-                </p>
-                <p class="parte">
-                    Pra piorar a liguagem<br>
-                    O emoticom é um risco<br>
-                    Tem símbolo para tudo<br>
-                    Ponto e vírgula e um asterisco<br>
-                    Um beijo significa<br>
-                    Pra entender como fica<br>
-                    Decifre esse rabisco.<br>
-                </p>
-                <p class="transp">
-                    Tenho saudade das cartas<br>
-                    Escritas com a própria mão<br>
-                    Mandava no mês de Junho<br>
-                    Só chegava no Verão<br>
-                    Mas matava a saudade<br>
-                    Era texto de verdade<br>
-                    Nas linhas do coração.<br>
-                </p>
-                <p class="parte">
-                    Agora, escrevo e envio<br>
-                    Chegando na mesma hora<br>
-                    Mas quando vou prosear<br>
-                    A pessoa foi embora<br>
-                    Abriu outro aplicativo<br>
-                    O mundo ficou cativo<br>
-                    Da tecnologia do agora.<br>
-                </p>
-                <p class="parte">
-                    Felizmente, pra orar<br>
-                    Não precisa de internet<br>
-                    Deus escuta todo mundo<br>
-                    Se quiser, faça esse teste<br>
-                    Dois pontos são dois joelhos<br>
-                    Seus lábios são aparelhos<br>
-                    Deixe que Deus interprete.<br>
-                </p>
+            <article>
+                <div class="quadrado" id="q1">
+                    <p>
+                        Estou ficando cansado<br>
+                        Da tal tecnologia<br>
+                        Só se fala por e-mail<br>
+                        Mensagem curta e fria<br>
+                        Twitter e Facebook<br>
+                        Antes que eu caduque<br>
+                        Vou dizer tudo em poesia.<br>
+                    </p>
+                </div>
+                <div class="quadrado" id="q2">
+                    <p>
+                        Não é mais como era antes<br>
+                        É tudo abreviado<br>
+                        "Você" só tem duas letras<br>
+                        O "O" e o "E" foi riscado<br>
+                        Para declarar o amor<br>
+                        Basta botar uma flor<br>
+                        E um coração desenhado.<br>
+                    </p>
+                </div>
+                <div class="quadrado" id="q1">
+                    <p>
+                        Arroba agora não pesa<br>
+                        É parte de um endereço<br>
+                        Ponto final nem se usa<br>
+                        Ou vai até no começo<br>
+                        Agora é .com<br>
+                        Se o saite é muito bom<br>
+                        Ele vale um alto preço.<br>
+                    </p>
+                </div>
+                <div class="quadrado" id="q1">
+                    <p>
+                        Pra piorar a liguagem<br>
+                        O emoticom é um risco<br>
+                        Tem símbolo para tudo<br>
+                        Ponto e vírgula e um asterisco<br>
+                        Um beijo significa<br>
+                        Pra entender como fica<br>
+                        Decifre esse rabisco.<br>
+                    </p>
+                </div>
+                <div class="quadrado" id="q2">
+                    <p>
+                        Tenho saudade das cartas<br>
+                        Escritas com a própria mão<br>
+                        Mandava no mês de Junho<br>
+                        Só chegava no Verão<br>
+                        Mas matava a saudade<br>
+                        Era texto de verdade<br>
+                        Nas linhas do coração.<br>
+                    </p>
+                </div>
+                <div class="quadrado" id="q1">
+                    <p>
+                        Agora, escrevo e envio<br>
+                        Chegando na mesma hora<br>
+                        Mas quando vou prosear<br>
+                        A pessoa foi embora<br>
+                        Abriu outro aplicativo<br>
+                        O mundo ficou cativo<br>
+                        Da tecnologia do agora.<br>
+                    </p>
+                </div>
+                <div class="quadrado" id="q1">
+                    <p>
+                        Felizmente, pra orar<br>
+                        Não precisa de internet<br>
+                        Deus escuta todo mundo<br>
+                        Se quiser, faça esse teste<br>
+                        Dois pontos são dois joelhos<br>
+                        Seus lábios são aparelhos<br>
+                        Deixe que Deus interprete.<br>
+                    </p>
+                </div>
             </article>
     </main>
     <footer>
-        <p>Site criado por Gustavo Guanabara para o CursoemVideo</p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
