--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -28,15 +28,17 @@
                     </p>
                 </div>
                 <div class="quadrado" id="q2">
-                    <p>
-                        Não é mais como era antes<br>
-                        É tudo abreviado<br>
-                        "Você" só tem duas letras<br>
-                        O "O" e o "E" foi riscado<br>
-                        Para declarar o amor<br>
-                        Basta botar uma flor<br>
-                        E um coração desenhado.<br>
-                    </p>
+                    <div id="q2a">
+                        <p>
+                            Não é mais como era antes<br>
+                            É tudo abreviado<br>
+                            "Você" só tem duas letras<br>
+                            O "O" e o "E" foi riscado<br>
+                            Para declarar o amor<br>
+                            Basta botar uma flor<br>
+                            E um coração desenhado.<br>
+                        </p>
+                    </div>
                 </div>
                 <div class="quadrado" id="q1">
                     <p>
