--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
             <article>
-                <div class="quadrado" id="q1">
+                <div class="quadrado">
                     <p>
                         Estou ficando cansado<br>
                         Da tal tecnologia<br>
@@ -27,8 +27,8 @@
                         Vou dizer tudo em poesia.<br>
                     </p>
                 </div>
-                <div class="quadrado" id="q2">
-                    <div id="q2a">
+                <div class="quadrado" id="q1">
+                    <div id="q2">
                         <p>
                             Não é mais como era antes<br>
                             É tudo abreviado<br>
@@ -40,7 +40,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="quadrado" id="q1">
+                <div class="quadrado">
                     <p>
                         Arroba agora não pesa<br>
                         É parte de um endereço<br>
@@ -51,7 +51,7 @@
                         Ele vale um alto preço.<br>
                     </p>
                 </div>
-                <div class="quadrado" id="q1">
+                <div class="quadrado">
                     <p>
                         Pra piorar a liguagem<br>
                         O emoticom é um risco<br>
@@ -62,18 +62,20 @@
                         Decifre esse rabisco.<br>
                     </p>
                 </div>
-                <div class="quadrado" id="q2">
-                    <p>
-                        Tenho saudade das cartas<br>
-                        Escritas com a própria mão<br>
-                        Mandava no mês de Junho<br>
-                        Só chegava no Verão<br>
-                        Mas matava a saudade<br>
-                        Era texto de verdade<br>
-                        Nas linhas do coração.<br>
-                    </p>
-                </div>
                 <div class="quadrado" id="q1">
+                    <div id="q2">
+                        <p>
+                            Tenho saudade das cartas<br>
+                            Escritas com a própria mão<br>
+                            Mandava no mês de Junho<br>
+                            Só chegava no Verão<br>
+                            Mas matava a saudade<br>
+                            Era texto de verdade<br>
+                            Nas linhas do coração.<br>
+                        </p>
+                    </div>
+                </div>
+                <div class="quadrado">
                     <p>
                         Agora, escrevo e envio<br>
                         Chegando na mesma hora<br>
@@ -84,7 +86,7 @@
                         Da tecnologia do agora.<br>
                     </p>
                 </div>
-                <div class="quadrado" id="q1">
+                <div class="quadrado">
                     <p>
                         Felizmente, pra orar<br>
                         Não precisa de internet<br>
@@ -98,7 +100,7 @@
             </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
