--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -14,90 +14,92 @@
         Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a>
         </nav>
     </header>
-    <main>
-            <article>
-                <div class="quadrado">
+    <main >
+        <div id="container">
+            <div class="quadrado">
+                <p>
+                    Estou ficando cansado<br>
+                    Da tal tecnologia<br>
+                    Só se fala por e-mail<br>
+                    Mensagem curta e fria<br>
+                    Twitter e Facebook<br>
+                    Antes que eu caduque<br>
+                    Vou dizer tudo em poesia.<br>
+                </p>
+            </div>
+            <div class="quadrado" id="q1">
+                <div id="q2">
                     <p>
-                        Estou ficando cansado<br>
-                        Da tal tecnologia<br>
-                        Só se fala por e-mail<br>
-                        Mensagem curta e fria<br>
-                        Twitter e Facebook<br>
-                        Antes que eu caduque<br>
-                        Vou dizer tudo em poesia.<br>
+                    Não é mais como era antes<br>
+                    É tudo abreviado<br>
+                    "Você" só tem duas letras<br>
+                    O "O" e o "E" foi riscado<br>
+                    Para declarar o amor<br>
+                    Basta botar uma flor<br>
+                    E um coração desenhado.<br>
                     </p>
                 </div>
-                <div class="quadrado" id="q1">
-                    <div id="q2">
-                        <p>
-                            Não é mais como era antes<br>
-                            É tudo abreviado<br>
-                            "Você" só tem duas letras<br>
-                            O "O" e o "E" foi riscado<br>
-                            Para declarar o amor<br>
-                            Basta botar uma flor<br>
-                            E um coração desenhado.<br>
-                        </p>
-                    </div>
-                </div>
-                <div class="quadrado">
+            </div>
+            <div class="quadrado">
                     <p>
-                        Arroba agora não pesa<br>
-                        É parte de um endereço<br>
-                        Ponto final nem se usa<br>
-                        Ou vai até no começo<br>
-                        Agora é .com<br>
-                        Se o saite é muito bom<br>
-                        Ele vale um alto preço.<br>
+                    Arroba agora não pesa<br>
+                    É parte de um endereço<br>
+                    Ponto final nem se usa<br>
+                    Ou vai até no começo<br>
+                    Agora é .com<br>
+                    Se o saite é muito bom<br>
+                    Ele vale um alto preço.<br>
                     </p>
                 </div>
-                <div class="quadrado">
+            <div class="quadrado">
                     <p>
-                        Pra piorar a liguagem<br>
-                        O emoticom é um risco<br>
-                        Tem símbolo para tudo<br>
-                        Ponto e vírgula e um asterisco<br>
-                        Um beijo significa<br>
-                        Pra entender como fica<br>
-                        Decifre esse rabisco.<br>
+                    Pra piorar a liguagem<br>
+                    O emoticom é um risco<br>
+                    Tem símbolo para tudo<br>
+                    Ponto e vírgula e um asterisco<br>
+                    Um beijo significa<br>
+                    Pra entender como fica<br>
+                    Decifre esse rabisco.<br>
+                    </p>
+            </div>
+        </div>
+        <div id="baixo">
+            <div class="quadrado" id="q1">
+                <div id="q2">
+                    <p>
+                    Tenho saudade das cartas<br>
+                    Escritas com a própria mão<br>
+                    Mandava no mês de Junho<br>
+                    Só chegava no Verão<br>
+                    Mas matava a saudade<br>
+                    Era texto de verdade<br>
+                    Nas linhas do coração.<br>
                     </p>
                 </div>
-                <div class="quadrado" id="q1">
-                    <div id="q2">
-                        <p>
-                            Tenho saudade das cartas<br>
-                            Escritas com a própria mão<br>
-                            Mandava no mês de Junho<br>
-                            Só chegava no Verão<br>
-                            Mas matava a saudade<br>
-                            Era texto de verdade<br>
-                            Nas linhas do coração.<br>
-                        </p>
-                    </div>
-                </div>
-                <div class="quadrado">
-                    <p>
-                        Agora, escrevo e envio<br>
-                        Chegando na mesma hora<br>
-                        Mas quando vou prosear<br>
-                        A pessoa foi embora<br>
-                        Abriu outro aplicativo<br>
-                        O mundo ficou cativo<br>
-                        Da tecnologia do agora.<br>
-                    </p>
-                </div>
-                <div class="quadrado">
-                    <p>
-                        Felizmente, pra orar<br>
-                        Não precisa de internet<br>
-                        Deus escuta todo mundo<br>
-                        Se quiser, faça esse teste<br>
-                        Dois pontos são dois joelhos<br>
-                        Seus lábios são aparelhos<br>
-                        Deixe que Deus interprete.<br>
-                    </p>
-                </div>
-            </article>
+            </div>
+            <div class="quadrado">
+                <p>
+                Agora, escrevo e envio<br>
+                Chegando na mesma hora<br>
+                Mas quando vou prosear<br>
+                A pessoa foi embora<br>
+                Abriu outro aplicativo<br>
+                O mundo ficou cativo<br>
+                Da tecnologia do agora.<br>
+                </p>
+            </div>
+            <div class="quadrado">
+                <p>
+                Felizmente, pra orar<br>
+                Não precisa de internet<br>
+                Deus escuta todo mundo<br>
+                Se quiser, faça esse teste<br>
+                Dois pontos são dois joelhos<br>
+                Seus lábios são aparelhos<br>
+                Deixe que Deus interprete.<br>
+                </p>
+            </div>
+        </div>
     </main>
     <footer>
         <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
