--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,29 +8,30 @@
     <link rel="stylesheet" href="style.css">
     <title>Cordel Moderno</title>
 </head>
-<body >
+
+<body>
     <header>
         <h1>Cordel Moderno</h1>
         <nav>
-        Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton
+                Duarte</a>
         </nav>
     </header>
-    <main >
-        <div id="container">
-            <div class="quadrado">
+    <section>
+        <div>
+            <p>
+                Estou ficando cansado<br>
+                Da tal tecnologia<br>
+                Só se fala por e-mail<br>
+                Mensagem curta e fria<br>
+                Twitter e Facebook<br>
+                Antes que eu caduque<br>
+                Vou dizer tudo em poesia.<br>
+            </p>
+        </div>
+        <div>
+            <div>
                 <p>
-                    Estou ficando cansado<br>
-                    Da tal tecnologia<br>
-                    Só se fala por e-mail<br>
-                    Mensagem curta e fria<br>
-                    Twitter e Facebook<br>
-                    Antes que eu caduque<br>
-                    Vou dizer tudo em poesia.<br>
-                </p>
-            </div>
-            <div class="quadrado" id="q1">
-                <div id="q2">
-                    <p>
                     Não é mais como era antes<br>
                     É tudo abreviado<br>
                     "Você" só tem duas letras<br>
@@ -37,36 +39,37 @@
                     Para declarar o amor<br>
                     Basta botar uma flor<br>
                     E um coração desenhado.<br>
-                    </p>
-                </div>
-            </div>
-            <div class="quadrado">
-                    <p>
-                    Arroba agora não pesa<br>
-                    É parte de um endereço<br>
-                    Ponto final nem se usa<br>
-                    Ou vai até no começo<br>
-                    Agora é .com<br>
-                    Se o saite é muito bom<br>
-                    Ele vale um alto preço.<br>
-                    </p>
-                </div>
-            <div class="quadrado">
-                    <p>
-                    Pra piorar a liguagem<br>
-                    O emoticom é um risco<br>
-                    Tem símbolo para tudo<br>
-                    Ponto e vírgula e um asterisco<br>
-                    Um beijo significa<br>
-                    Pra entender como fica<br>
-                    Decifre esse rabisco.<br>
-                    </p>
+                </p>
             </div>
         </div>
-        <div id="baixo">
-            <div class="quadrado" id="q1">
-                <div id="q2">
-                    <p>
+        <div>
+            <p>
+                Arroba agora não pesa<br>
+                É parte de um endereço<br>
+                Ponto final nem se usa<br>
+                Ou vai até no começo<br>
+                Agora é .com<br>
+                Se o saite é muito bom<br>
+                Ele vale um alto preço.<br>
+            </p>
+        </div>
+        <div>
+            <p>
+                Pra piorar a liguagem<br>
+                O emoticom é um risco<br>
+                Tem símbolo para tudo<br>
+                Ponto e vírgula e um asterisco<br>
+                Um beijo significa<br>
+                Pra entender como fica<br>
+                Decifre esse rabisco.<br>
+            </p>
+    </section>
+
+    <section>
+        </div>
+        <div>
+            <div>
+                <p>
                     Tenho saudade das cartas<br>
                     Escritas com a própria mão<br>
                     Mandava no mês de Junho<br>
@@ -74,11 +77,11 @@
                     Mas matava a saudade<br>
                     Era texto de verdade<br>
                     Nas linhas do coração.<br>
-                    </p>
-                </div>
+                </p>
             </div>
-            <div class="quadrado">
-                <p>
+        </div>
+        <div>
+            <p>
                 Agora, escrevo e envio<br>
                 Chegando na mesma hora<br>
                 Mas quando vou prosear<br>
@@ -86,10 +89,10 @@
                 Abriu outro aplicativo<br>
                 O mundo ficou cativo<br>
                 Da tecnologia do agora.<br>
-                </p>
-            </div>
-            <div class="quadrado">
-                <p>
+            </p>
+        </div>
+        <div>
+            <p>
                 Felizmente, pra orar<br>
                 Não precisa de internet<br>
                 Deus escuta todo mundo<br>
@@ -97,12 +100,12 @@
                 Dois pontos são dois joelhos<br>
                 Seus lábios são aparelhos<br>
                 Deixe que Deus interprete.<br>
-                </p>
-            </div>
+            </p>
         </div>
-    </main>
+    </section>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a
+                href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
