--- a/desafios/modulo-02/d012 Eraldo/index.html
+++ b/desafios/modulo-02/d012 Eraldo/index.html
@@ -17,8 +17,8 @@
                 Duarte</a>
         </nav>
     </header>
-    <section>
-        <div>
+    <section class="imagem" id="back01">
+        <div class="quadrado">
             <p>
                 Estou ficando cansado<br>
                 Da tal tecnologia<br>
@@ -29,20 +29,18 @@
                 Vou dizer tudo em poesia.<br>
             </p>
         </div>
-        <div>
-            <div>
-                <p>
-                    Não é mais como era antes<br>
-                    É tudo abreviado<br>
-                    "Você" só tem duas letras<br>
-                    O "O" e o "E" foi riscado<br>
-                    Para declarar o amor<br>
-                    Basta botar uma flor<br>
-                    E um coração desenhado.<br>
-                </p>
-            </div>
+        <div class="transparente">
+            <p>
+                Não é mais como era antes<br>
+                É tudo abreviado<br>
+                "Você" só tem duas letras<br>
+                O "O" e o "E" foi riscado<br>
+                Para declarar o amor<br>
+                Basta botar uma flor<br>
+                E um coração desenhado.<br>
+            </p>
         </div>
-        <div>
+        <div class="quadrado">
             <p>
                 Arroba agora não pesa<br>
                 É parte de um endereço<br>
@@ -53,7 +51,7 @@
                 Ele vale um alto preço.<br>
             </p>
         </div>
-        <div>
+        <div class="transparente">
             <p>
                 Pra piorar a liguagem<br>
                 O emoticom é um risco<br>
@@ -64,22 +62,19 @@
                 Decifre esse rabisco.<br>
             </p>
     </section>
-    <section>
+    <section class="imagem" id="back02">
+        <div class="quadrado"> 
+            <p>
+                Tenho saudade das cartas<br>
+                Escritas com a própria mão<br>
+                Mandava no mês de Junho<br>
+                Só chegava no Verão<br>
+                Mas matava a saudade<br>
+                Era texto de verdade<br>
+                Nas linhas do coração.<br>
+            </p>
         </div>
-        <div>
-            <div>
-                <p>
-                    Tenho saudade das cartas<br>
-                    Escritas com a própria mão<br>
-                    Mandava no mês de Junho<br>
-                    Só chegava no Verão<br>
-                    Mas matava a saudade<br>
-                    Era texto de verdade<br>
-                    Nas linhas do coração.<br>
-                </p>
-            </div>
-        </div>
-        <div>
+        <div class="transparente">
             <p>
                 Agora, escrevo e envio<br>
                 Chegando na mesma hora<br>
@@ -90,7 +85,7 @@
                 Da tecnologia do agora.<br>
             </p>
         </div>
-        <div>
+        <div class="quadrado">
             <p>
                 Felizmente, pra orar<br>
                 Não precisa de internet<br>
