--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -3,9 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            width: 400px;
+            border-collapse: collapse;/*junta as bordas das células*/
+        }
+
+        tr.linha {
+            background-color: gray;
+        }
+
+        td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+
+        td.dado {
+            background-color: yellow;
+        }
+
+    </style>
 </head>
 <body>
-    
+    <h1>Minha primeira tabela</h1>
+     <!--
+     Hierarquia de tabelas simples:
+	
+	 table				(tabela)
+	 table row			(tr - linha)
+	 table header	    (th - cabeçalho)
+	 table data		    (td - dado)
+
+     Observações:
+
+     - W3C: os fechamentos das tags <tr> e <td> não são obrigatórios, porém recomendados;
+     - Se a hierarquia não for respeitada, os elementos vão aparecer antes ou depois da tabela.
+    -->
+    <table>
+        <tr> <!-- Primeira linha -->
+            <td>A1</td>
+            <td>B1</td>
+            <td>C1</td>
+        </tr>
+        <tr class="linha"> <!-- Segunda linha -->
+            <td>A2</td>
+            <td>B2</td>
+            <td>C2</td>
+        </tr>
+        <tr> <!-- Terceira linha -->
+            <td class="dado">A3</td>
+            <td>B3</td>
+            <td>C3</td>
+        </tr>
+        <tr> <!-- Quarta linha -->
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
+        </tr>
+    </table>
 </body>
 </html>
