--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -11,20 +11,19 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;/*junta as bordas das células*/
-        }
-
-        tr.linha {
-            background-color: gray;
         }
 
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center;/* Alinhamento horizontal */
+            vertical-align: middle;/* Alinhamento vertical */
         }
 
-        td.dado {
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
 
     </style>
@@ -43,22 +42,40 @@
 
      - W3C: os fechamentos das tags <tr> e <td> não são obrigatórios, porém recomendados;
      - Se a hierarquia não for respeitada, os elementos vão aparecer antes ou depois da tabela.
-    -->
+     
+     Alinhamento horizontal:
+
+	 text-align: 	left;(padrão)
+			        center;
+			        right;
+
+     Alinhamento vertical:	
+
+	 vertical-align:	top;
+			            middle;(padrão)
+			            bottom;
+
+
+     Para números à direita (padrão do Excel):
+
+	 - Criar uma classe e alinhar os "td" dessa classe à direita (right).
+
+     -->
     <table>
         <tr> <!-- Primeira linha -->
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha"> <!-- Segunda linha -->
+        <tr> <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!-- Terceira linha -->
-            <td class="dado">A3</td>
+            <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr> <!-- Quarta linha -->
             <td>A4</td>
