--- a/exercicios/ex023/tabela003.html
+++ b/exercicios/ex023/tabela003.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
     <style>
+    /*
+    MESCLANDO CÉLULAS:
+
+    Expansão em forma de coluna:	<td colspan=" ">        </td>
+
+    Ex: 	<td colspan="2">B</td>	  -> expandindo B para 2 colunas.
+
+    Expansão em forma de linha:	<td rowspan=" ">        </td>
+
+    Ex:	        <td rowspan="3">D</td>	  -> expandindo D para 3 linhas.
+    */
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
