--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
     <style>
+        /*
+        ESCOPOS DE GRUPO
+
+        Escopo em grupo de colunas:	<th colspan="  " scope="colgroup">      </th>
+
+         Ex:	<th colspan="3" scope="colgroup">Filmes</th>
+
+        Escopo em grupo de linhas:	<th rowspan="  " scope="rowgroup">      </th>
+
+         Ex:	<th rowspan="3" scope="rowgroup">Mulheres</th>
+        */
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
@@ -35,14 +46,14 @@
         </caption>
         <thead>
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -61,7 +72,7 @@
                 <td>Big Hero</td>
             </tr>
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup" scope="rowgroup">Homens</th>
                 <td>Bruno Mendonça</td>
                 <td>Intocáveis</td>
                 <td>Amnésia</td>
