--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -28,7 +28,8 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima fugiat veritatis rerum architecto expedita. Minus animi velit voluptate commodi voluptates totam similique deleniti sequi magni at nesciunt inventore officia dolor eius ipsum eum ad porro, quisquam dolore nemo. Veniam temporibus consequuntur corporis molestias officia hic quibusdam autem deserunt? Maiores, corporis a eos voluptatem quisquam veniam provident debitis dolore nesciunt rem error, doloribus rerum est! Fuga vel repellat id veniam possimus recusandae placeat debitis eum corporis animi iste, cum exercitationem accusantium ad, libero assumenda expedita veritatis, quia molestiae. Unde quasi corporis modi aperiam odit quis, voluptatem error cum impedit dolorem labore.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1> 
+        Escolha uma das opções acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum esse officia quaerat minus cupiditate hic porro odio nemo, quo dolorum debitis quae id, totam laboriosam asperiores deserunt temporibus dolore molestias?</p><img src='imagens/Ativo-11.png'>">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
     
