--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -13,9 +13,9 @@
 <body>
     <h1>Meu primeiro formulário</h1>
     <form>
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p>
-        <p><input type="submit" value="Enviar"></p>
+        <p>Nome: <input type="text" name="nome" id="nome"></p> <!-- Input de texto -->
+        <p>Sobrenome: <input type="text" name="sobrenome" id="sobrenome"></p> <!-- Input de texto -->
+        <p><input type="submit" value="Enviar"></p> <!-- Input de envio -->
     </form>
 </body>
 </html>
