--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -30,7 +30,7 @@
         - Usado também para upload de arquivos (fotos, documentos, etc.).
     -->
     <h1>Meu primeiro formulário</h1>
-    <form action="cadastro.php" method="GET" autocomplete="off"> <!-- função action para enviar os dados -->
+    <form action="cadastro.php" method="POST" autocomplete="off"> <!-- função action para enviar os dados -->
         <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome"></p> <!-- Input de texto -->
         <p><label for="isobrenome">Sobrenome:</label> <input type="text" name="sobrenome" id="isobrenome"></p> <!-- Input de texto -->
         <p><input type="submit" value="Enviar"></p> <!-- Input de envio -->
