--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -6,6 +6,13 @@
     <title>Media Query</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img src="imagens/icon-phone.png" alt="Acessando via smartphone">
+        <img src="imagens/back-tablet.jpg" alt="Acessando via Tablet">
+        <img src="imagens/back-tv.jpg" alt="Acessando via TV">
+        <img src="imagens/back-print.jpg" alt="Acessando versão para impressão">
+        <img src="imagens/icon-pc.png" alt="Acessando versão para desktop">
+    </main>
 </body>
 </html>
