--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <h1>Testando Media Queries</h1>
-        <img src="imagens/icon-phone.png" alt="Acessando via smartphone">
-        <img src="imagens/back-tablet.jpg" alt="Acessando via Tablet">
-        <img src="imagens/back-tv.jpg" alt="Acessando via TV">
-        <img src="imagens/back-print.jpg" alt="Acessando versão para impressão">
-        <img src="imagens/icon-pc.png" alt="Acessando versão para desktop">
+        <img id="telef" src="imagens/icon-phone.png" alt="Acessando via smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via Tablet">
+        <img id="tv" src="imagens/icon-tv.png" alt="Acessando via TV">
+        <img id="impr" src="imagens/icon-print.png" alt="Acessando versão para impressão">
+        <img id="pc" src="imagens/icon-pc.png" alt="Acessando versão para desktop">
     </main>
 </body>
 </html>
