--- a/exercicios/ex027/flex004/index.html
+++ b/exercicios/ex027/flex004/index.html
@@ -7,9 +7,11 @@
     <style>
         div.conteiner { /* Pai */ 
             background-color: lightsalmon;
+            height: 300px;
             display: flex;
+            flex-flow: row nowrap;
             justify-content: space-between;
-        }
+            align-items: center;
 
         div.item { /* Filho */
             background-color: lightskyblue;
