--- a/exercicios/ex027/flex004/index.html
+++ b/exercicios/ex027/flex004/index.html
@@ -11,7 +11,8 @@
             display: flex;
             flex-flow: row nowrap;
             justify-content: space-between;
-            align-items: center;
+            align-items: flex-end;
+        }    
 
         div.item { /* Filho */
             background-color: lightskyblue;
