--- a/exercicios/ex027/flex013 - Menu FlexBox/index.html
+++ b/exercicios/ex027/flex013 - Menu FlexBox/index.html
@@ -20,17 +20,25 @@
         </nav>
     </header>
     <main>
-        <div id="cx1">
-            <h2>Teste de FlexBox</h2>
+        <div id="cx0">
+            <h2>Teste do canto</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab placeat laborum qui dolores magnam molestiae temporibus ipsum, sunt a beatae soluta doloribus ea, tempora corporis, hic aut architecto eveniet adipisci.</p>
+        </div>
+        <div id="cx1">
+            <h2>Texto do centro</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolor a maxime excepturi assumenda laudantium deserunt minima alias, repudiandae eligendi hic harum dolores numquam minus molestias! Quos, molestiae repellendus! Excepturi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio vel, assumenda natus modi et nulla exercitationem eum quis ea tenetur? Praesentium quidem dignissimos illo alias quia iusto quibusdam ipsum officiis eaque neque hic deserunt impedit facilis laudantium, dicta beatae corporis dolorum! Ea assumenda magni hic ex maxime tenetur, dolorum reprehenderit itaque ut eos fugiat sapiente. Dolor repudiandae vel maxime consequatur amet aliquid modi. Recusandae eos laborum quia qui asperiores repellat, temporibus tempora magni sapiente perferendis magnam enim consequuntur voluptas voluptatibus praesentium ab a aliquam distinctio amet adipisci est omnis aspernatur? Cupiditate nobis nihil molestias rerum necessitatibus. Dicta dolores reprehenderit facere.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio vel, assumenda natus modi et nulla exercitationem eum quis ea tenetur? Praesentium quidem dignissimos illo alias quia iusto quibusdam ipsum officiis eaque neque hic deserunt impedit facilis laudantium, dicta beatae corporis dolorum! Ea assumenda magni hic ex maxime tenetur, dolorum reprehenderit itaque ut eos fugiat sapiente. Dolor repudiandae vel maxime consequatur amet aliquid modi. Recusandae eos laborum quia qui asperiores repellat, temporibus tempora magni sapiente perferendis magnam enim consequuntur voluptas voluptatibus praesentium ab a aliquam distinctio amet adipisci est omnis aspernatur? Cupiditate nobis nihil molestias rerum necessitatibus. Dicta dolores reprehenderit facere.</p>
         </div>
         <div id="cx2">
                 <h2>Teste Notícias</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias commodi doloremque voluptatem, et qui voluptatibus ad tempora distinctio eos praesentium incidunt nemo aperiam repellendus odio labore? Dolorum maiores dolor earum?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate blanditiis quo perferendis perspiciatis asperiores magni voluptatem distinctio illum debitis! Rem repellendus ducimus quod, dolores molestias placeat veniam dolorem! Omnis, ratione.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptatibus odit laboriosam molestiae cum modi quasi porro accusamus provident quo enim, eaque perferendis odio rem consequatur sit. Vitae, doloribus nam.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque eligendi tempore quis voluptas fugit temporibus repellat sapiente nisi eveniet. Tempora consectetur perspiciatis voluptas autem nesciunt cumque nihil pariatur itaque quae!</p>
+                <ul>
+                    <li>Noticia 1</li>
+                    <li>Noticia 2</li>
+                    <li>Noticia 3</li>
+                    <li>Noticia 4</li>
+                    <li>Noticia 5</li>
+                </ul>
             </div>
     </main>
 </body>
