--- a/exercicios/ex027/flex013 - Menu FlexBox/index.html
+++ b/exercicios/ex027/flex013 - Menu FlexBox/index.html
@@ -33,11 +33,11 @@
         <div id="cx2">
                 <h2>Teste Notícias</h2>
                 <ul>
-                    <li>Noticia 1</li>
-                    <li>Noticia 2</li>
-                    <li>Noticia 3</li>
-                    <li>Noticia 4</li>
-                    <li>Noticia 5</li>
+                    <li><a href="#">Noticia 1</a></li>
+                    <li><a href="#">Noticia 2</a></li>
+                    <li><a href="#">Noticia 3</a></li>
+                    <li><a href="#">Noticia 4</a></li>
+                    <li><a href="#">Noticia 5</a></li>
                 </ul>
             </div>
     </main>
