--- a/exercicios/modulo-05/ex028/grid01/index.html
+++ b/exercicios/modulo-05/ex028/grid01/index.html
@@ -7,12 +7,21 @@
     <style>
         div.container {
             border: 3px solid blue;
-            height: 250px;
             display: grid;
-            grid-template-columns: auto auto auto;
-            grid-template-rows: auto auto auto;
             gap: 10px;
-            
+            /* 
+            grid-template-rows: auto auto auto; ---- Nessa ordem ----
+            grid-template-columns: auto auto auto;
+            */
+            grid-template: 100px 100px 100px / auto auto auto;
+            /*
+            align-items: normal;    ----- Nessa ordem -----
+            justify-items: center;
+            align-content: start;
+            justify-content: space-around;
+            */
+            place-items: normal center;
+            place-content: start space-around;
         }
 
         div.item {
