--- a/exercicios/modulo-05/ex028/grid01/index.html
+++ b/exercicios/modulo-05/ex028/grid01/index.html
@@ -13,7 +13,7 @@
             grid-template-rows: auto auto auto; ---- Nessa ordem ----
             grid-template-columns: auto auto auto;
             */
-            grid-template: 100px 100px 100px / auto auto auto;
+            grid-template: repeat(3, 100px) / repeat(3, auto);
             /*
             align-items: normal;    ----- Nessa ordem -----
             justify-items: center;
