--- a/desafios/d018 Professor/index.html
+++ b/desafios/d018 Professor/index.html
@@ -21,7 +21,21 @@
     </header>
 
     <main>
-        <h1>Em breve...</h1>
+        <section id="ficha">
+            <img src="imagens/guanabara-perfil.jpg" alt="perfil" class="foto">
+            <h1>Gustavo Guanabara</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum vel consequuntur corrupti esse, pariatur repellat? Facilis ipsum omnis voluptatem voluptates deleniti commodi temporibus vero totam culpa rerum et, nisi magni laborum consequatur eaque pariatur quia nemo eius voluptas id incidunt quidem. Error, expedita eligendi voluptatum ut placeat repudiandae. Autem, atque!</p>
+            <div id="social">
+                <a href="#">Linkedin</a>
+                <a href="#">GitHub</a>
+                <a href="#">YouTube</a>
+                <a href="#">Instagram</a>
+                <a href="#">Site</a>
+            </div>
+        </section>
+        <section id="detalhes">
+
+        </section>
     </main>
 
     <footer>
